# Cpp-Resource

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ServerReservation/: CMakeLists.txt  main.cpp
ServerReservation/Inc/: Administer.h  BackupFunc.h  Identity.h  OrderFile.h  Student.h  Teacher.h  computerRoom.h  globalFile.h
ServerReservation/Src/: Administer.cpp  BackupFunc.cpp  Identity.cpp  OrderFile.cpp  Student.cpp  Teacher.cpp  computerRoom.cpp
SpeechCompetition/: CMakeLists.txt
SpeechCompetition/Inc/: Speaker.h  speechManager.h
SpeechCompetition/Test/: test.cpp
Src/: Speaker.cpp  speechManager.cpp
