cmake_minimum_required(VERSION 3.21 FATAL_ERROR)
project(SpeechCompitation)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_options(-Wall -std=c++2a -O2)
set(SRC Src/speechManager.cpp Src/Speaker.cpp)
include_directories(Inc/)
aux_source_directory(. SRC)
add_executable(main main.cpp ${SRC})
