cmake_minimum_required(VERSION 3.21 FATAL_ERROR)
project(ServerReservation)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_options(-Wall -std=c++2a -O2)
link_directories(Src/)
include_directories(Inc/)
aux_source_directory(Src/ SRC)
add_executable(main main.cpp ${SRC})